# polling-dapp-stellar

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.kiro/specs/stellar-live-poll-dapp/: .config.kiro  design.md  requirements.md  tasks.md
poll_contract/: Cargo.toml  README.md
src/: App.jsx  App.module.css  index.css  main.jsx
src/components/: CreatePollForm.jsx  PollCard.jsx  PollCard.module.css  PollHistory.jsx  TransactionStatus.jsx  TransactionStatus.module.css  VoteBar.jsx  VoteBar.module.css  WalletConnector.jsx  WalletConnector.module.css
src/components/CreatePoll/: CreatePoll.jsx  CreatePoll.module.css
src/components/PollHistory/: PollHistory.jsx  PollHistory.module.css
src/context/: PollContext.jsx  WalletContext.jsx
src/utils/: config.js  contract.js  format.js  horizon.js
