[workspace]
resolver = "2"
# members = ["contracts/*"]
# Uncomment the line above and add your PollContract under contracts/
# once the Soroban contract source is included in this repository.

[workspace.dependencies]
soroban-sdk = "25"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
